Fixed linux report icon and improved icon spacing

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -62,6 +62,12 @@ a.permalink {
     margin-left: 10px;
 }
 
+a.reportlink {
+    float: right;
+    text-decoration: none;
+    margin-left: 5px;
+}
+
 h1 {
     margin:0;
     padding:0;
